# cmdbox

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  freeze_version.py  git_versioning_callback.py  logger_config.py  pyproject.toml
doc/: bycompare.md  cmd_register.md  codereview.md  command_collector.md  ownpygit.md  start.md  task_manager.md
examples/: BaseModel_test.py  alias_script.py  cmdstr_split.py  common_test.py  input_test.py  option_test.py  screat_version.py  which_test.py
examples/command_test/: main.py  utils.py
pycmdbox/: pyvenv.cfg
pycmdbox/Scripts/: activate  activate.bat
scripts/: git_versioning_callback.py
src/cmdbox/: cmdbox.py
src/cmdbox_commands/cmd_register/: __init__.py  cli.py  cmd_register.py  config.py
src/cmdbox_commands/cmd_register/py_project/: __init__.py  generator.py  py_project.py  pyproject_toml.py  utils.py
src/cmdbox_commands/codereview/: __init__.py  analyze.py  codereview.py  config.py  git_operations.py  logger.py  solution.md  sync.py
src/cmdbox_commands/command_collector/: CommandCollector.py  cccmd.py
src/cmdbox_commands/gen_pwd/: generate_password.py
src/cmdbox_commands/ownpygit/: ownpygit.py
src/cmdbox_commands/pycompare/: logger.py  logging_config.py  pycompare.py  search_dialog.py
src/cmdbox_commands/pycompare/compare_core/: __init__.py  compare_core.py  core_qwen.py
src/cmdbox_commands/pycompare/workspace/: editor.py  events_queue.py  workspace.py
src/cmdbox_commands/task_manager/: cli.py  manager.py  wrapper_template.py.j2
src/command_collector/: CommandCollector.py  cccmd.py
src/ownpygit/: ownpygit.py
src/task_manager/: cli.py  manager.py  wrapper_template.py.j2
