[build-system]
requires = [
    "setuptools>=42", 
    "setuptools-git-versioning>=2.0,<3"
]
build-backend = "setuptools.build_meta"

[project]
name = "cmdbox"
dynamic = ["version"]  # 声明动态版本
description = "命令行工具集"
authors = [
    {name = "Your Name", email = "your.name@example.com"}
]
readme = "README.md"
license = "MIT"
#repository = "https://gitee.com/binnchern/cmdbox"
dependencies = [
    # for cccmd
    "colorama==0.4.6",
    # for task_manager
    "click>=8.0",
    "psutil>=5.8",
    "jinja2>=3.1.6",
    "numpy>=2.3.1",
]
requires-python = ">=3.11.2"

[project.optional-dependencies]
dev = [
    "pre-commit>4.0",
    "setuptools-git-versioning>=2.0,<3",
]

[project.scripts]
cmdbox = "cmdbox.cmdbox:main"
cccmd = "cmdbox_commands.command_collector.cccmd:main"
ownpygit = "cmdbox_commands.ownpygit.ownpygit:main"
taskbm = "cmdbox_commands.task_manager.cli:cli"

[project.gui-scripts]
pycompare = "cmdbox_commands.pycompare.pycompare:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cmdbox*", "cmdbox_commands*"]

[tool.setuptools.package-data]
"cmdbox_commands.task_manager" = ["*.j2"]

[tool.setuptools-git-versioning]
enabled = true
version_callback = "git_versioning_callback:install_version"
