[build-system]
requires = [
    "setuptools>=42", 
    "setuptools-git-versioning>=2.0,<3"
]
build-backend = "setuptools.build_meta"

[project]
name = "cmdbox"
dynamic = ["version"]  # 声明动态版本
description = "命令行工具集"
authors = [
    {name = "Your Name", email = "your.name@example.com"}
]
readme = "README.md"
license = "MIT"
#repository = "https://gitee.com/binnchern/cmdbox"
dependencies = [
    # for cccmd
    "colorama==0.4.6",
    # for task_manager
    "click>=8.0",
    "psutil>=5.8",
    "jinja2>=3.1.6",
    "numpy>=2.3.1",
    "pydantic>=2.11.7",
    "toml>=0.10.2",
    "chardet>=5.2.0",
    "tkinterdnd2>=0.4.3",
]
requires-python = ">=3.11.2"

[project.optional-dependencies]
dev = [
    "pip>=26.1.1",
    "pre-commit>4.0",
    "setuptools-git-versioning>=2.0,<3",
]

[project.scripts]
cmdbox = "cmdbox.cmdbox:main"
cmdr = "cmdbox_commands.cmd_register.cli:main"
taskbm = "cmdbox_commands.task_manager.cli:cli"
ownpygit = "cmdbox_commands.ownpygit.ownpygit:main"
cccmd = "cmdbox_commands.command_collector.cccmd:main"
genpwd = "cmdbox_commands.gen_pwd.generate_password:cli"
codereview = "cmdbox_commands.codereview.codereview:cli"
cr = "cmdbox_commands.codereview.codereview:cli"
pycompare = "cmdbox_commands.pycompare.pycompare:cli"

[project.gui-scripts]
pycompare-gui = "cmdbox_commands.pycompare.pycompare:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "cmdbox*", 
    "cmdbox_commands*"
]

[tool.setuptools.package-data]
"cmdbox_commands.task_manager" = ["*.j2"]

[tool.setuptools-git-versioning]
enabled = true
version_callback = "scripts.git_versioning_callback:install_version"
